# fjsonl

./: .gitignore  README.md  bench.sh  dune-project  generate.sh  life.opam  run_check.sh  run_test_program.sh  test_file.yaml  trace_mac.sh
benchmarks/: CMakeLists.txt  benchmark.cpp  util.py
day1/: dune  main.ml
generator/: dune  main.ml
logger/: logger.h  original_test.h  test.cpp  util.h  wow.cpp
